# AlphaSymbol

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-cuda.txt  requirements-macos.txt  requirements.txt  run_spg_game.ipynb  tmp.md
AlphaMu/: mrf.py  pytest_check.py
AlphaMu/docs/: MRF.md
AlphaPrimitive/: prf.py
AlphaPrimitive/docs/: PRF.md
AlphaStrictPrf/: brute_force.py  generate_exprs_by_size.py  generate_output_by_size.py  generate_unique_output.py  generate_valid_exprs.py  run_spg_game.ipynb  strict_prf.py  strict_prf_game.py  usage_game.py
AlphaStrictPrf/data/: d2-p2-c2-unique.csv  d3-p2-c2-unique.csv  d3-p3-c2-unique.csv  d4-p2-c2-unique.csv
AlphaStrictPrf/docs/: StrictPrf.md  StrictPrfGame.md
StrictPrfGame/docs/: StrictPrf.md
cartpole/: dqn-tutorial.ipynb
data/: d4-p2-c2-unique.csv  size10-p3-c2-unique.csv  size13-p2-c3-unique.csv  size14-p2-c3-unique.csv  size4-p2-c2-unique.csv  size5-p3-c2-unique.csv
data/prfndim/: d3-a5-c3-r5.csv  d4-a3-c2-r3.csv  random_10000x20_p4_c4_r9.csv  random_500x20_p4_c4_r9_big_start.csv  unique_output.csv  unique_random_output_122.csv
data/strict-prf/: d2-p2-c2.csv  d4-p3-c2-unique.csv  d5-p2-c2-unique.csv  log.md  size21-p2-c3-unique.csv  size7-p3-c3-unique.csv
data_script/: add_status.py  extra_status.ipynb  generate_by_depth.py  generate_prfndim_by_depth.py  generate_random.py  generate_random_prfndim.py  input_output_columns.py  input_output_columns_exp.py  input_output_columns_exp_parallel.py  pipeline.ipynb  pipeline.py  pipline_from_initial_file.py  prfndim_utils.py  process_prfndim.ipynb  shuffle_and_split_data.py  sort_arity.py  sort_arity_points.py  split_data.py  status_columns.py  test_points_columns.py  unify_expr_csv.py  unify_output.ipynb  unify_output_csv.py
data_script/oeis/: get_oeis.ipynb
experiment/: analyze_points_exprs.ipynb  analyze_test.ipynb  analyze_train.ipynb  benchmark_read.py  evaluation.py  hf_dataset_training.ipynb  meta_train.ipynb  test_load_datamodule.ipynb
for_issue_9/: std_output.txt
meta_sr/: Example.ipynb  evaluation_with_prfndim.ipynb  evaluation_with_prfndim.py
meta_sr/symbolicregression/: __init__.py  (+3 more)
notebooks/: analyze_test.ipynb  analyze_token_length.ipynb  analyze_train.ipynb  get_oeis.ipynb
prfndim/: prfndim.py
setup/: README.md  docker_container.sh  requirements.txt  setup1.sh  setup2.sh  setup3.sh
tools/: merge_files.sh
train_script/: data.py  eval.ipynb  models.py  train.ipynb  train.py
transformer-tutorial/: data.py  main.py  model.py
(+65 files in other folders)
